test/fail/basic_syntax/self_initialize.lily
#[
SyntaxError: Attempt to use uninitialized value 'v'.
    from self_initialize.lily:6:
]#

var v = v
